# memoria.uy

./: .coverage  .env.example  .env.example.mvp  .gitignore  ANALYSIS_2025.md  AUDIT_MVP.md  AUTH_STRATEGY.md  BUBBLE_MAP_REDESIGN.md  CLAUDE.md  CLUSTERING_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT.md  Dockerfile  MESSAGING_ES.md  MVP_COMPLETE.md  Makefile  Makefile.local  PHASE_1_IMPLEMENTATION.md  PHASE_2_COMPLETE.md  PHASE_2_LLM_ENRICHMENT.md  PHASE_2_SETUP.md  POLIS_CLUSTERING_PLAN.md  POLIS_NULL_VOTES_ANALYSIS.md  Procfile  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  RAILWAY_EMAIL_SETUP.md  README.md  ROADMAP_2025.md  SEGURIDAD.md  TEST_NOW.md  VISION.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  manage.py  nb.ipynb  pyproject.toml  pytest.ini  railway.beat.json  railway.beat.toml  (+8 more)
memoria/: .coveragerc  .env.example  .gitignore  Dockerfile  Makefile  Makefile.local  README.md  adapter.py  celery.py  conftest.py  docker-compose.yml  nb.ipynb  pyproject.toml  settings.py  urls.py  views.py
memoria/core/: admin.py  archive.py  archive_org.py  forms.py  models.py  parse.py  tasks.py  views.py
memoria/core/migrations/: 0001_initial.py  0001_squashed_0006_noticia_archivo_titulo_noticia_meta_imagen_and_more.py  0002_noticia_archivo_fecha_noticia_archivo_imagen.py  0003_remove_noticia_fecha_publicacion_and_more.py  0004_entidad_noticia_resumen_alter_noticia_categoria_and_more.py  0006_noticia_archivo_titulo_noticia_meta_imagen_and_more.py  0007_noticia_fecha_noticia.py
memoria/memoria/: asgi.py  celery.py  settings.py  urls.py
memoria/nginx/: conf.d
(+162 files in other folders)
