[tool.poetry]
name = "memoria"
version = "0.1.0"
description = ""
authors = ["raulsperoni <raulsperoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
celery = "^5.4.0"
djangorestframework = "^3.15.2"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
supabase = "^2.13.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
django-allauth = "^65.4.1"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
